# atlas-agent

./: .atlas_update_state.json  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  bump.py  patch_sources.py  pyproject.toml
.antigravitycli/: e5a2f704-d460-434f-829e-9bd713ffb828.json
.atlas/: config.json
.atlas/safety/: heartbeat.json
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  docs_issue.yml  feature_request.md  feature_request.yml  reviewer_feedback.yml  safety_concern.yml
.github/workflows/: atlas-routines.yml  ci.yml  full-test.yml  omni-trade-routines.yml  provider-audit-pack.yml  release-assurance-artifact-retention-audit.yml  release-assurance-diagnostics-artifact-validate.yml  release-assurance.yml  release-gate.yml  research-ci.yml  reviewer-trust-snapshot.yml
artifacts/release_evidence/: evidence.json  evidence.md
audit/manifests/: run_1778420005.json
configs/: brokers.example.yaml  market.example.yaml  model_roster.yaml  providers.example.yaml  risk.example.yaml  strategy.example.yaml
data/sample/: README.md  ohlcv.csv  ohlcv_extended.csv
deploy/: Dockerfile  docker-compose.yml
deploy/gpu-cluster/: README.md
deploy/serverless/: README.md
deploy/systemd/: atlas-agent.service
deploy/vps/: README.md
docs/: architecture.md  autonomous-paper-loop.md  autonomous-paper-quality-gate.md  autonomous-paper-scorecard.md  autonomous-paper-workflow.md  autonomy-roadmap.md  batch-4.4-reconciliation.md  batch-4.6-plan.md  batch-4.7-plan.md  bounded-live-autonomy-governance.md  bounded-live-autonomy-readiness-design.md  bounded-live-autonomy-readiness.md  broker-roadmap.md  brokers.md  cand-016-release-maintenance-drift-hardening.md  candidate-chain-consistency-guard-design.md  candidate-chain-consistency-guard-implementation-plan.md  ci-release-gates.md  claude-code-setup.md  clean-install-verification.md  cli-command-compatibility.md  clickup-notifications.md  codex-setup.md  controlled-reviewer-outreach.md  dashboard.md  demo-artifact-index.md  demo-audit.md  demo-paper-workflow.md  demo-recording-guide.md  demo-risk-rejection.md  deployment.md  design-batch-4.0-live-submit.md  discipline-profile.md  environment-variables.md  external-reviewer-walkthrough.md  feedback-intake-process.md  feedback-request-guide.md  feedback-triage-taxonomy.md  final-rc-audit.md  final-release-candidate-checklist.md  (+88 more)
docs/adr/: ADR-0001-provider-execution-boundary.md
docs/archive/: README.md
docs/audits/: batch-7-post-incident-audit.md  post-research-system-audit.md  provider-preflight-freeze-v0.5.7.dev26.md  research-system-freeze-v0.5.7.dev14.md
docs/backtesting/: report-schema.md
docs/demo/: provider-preflight-demo.md
docs/development/: check-tiers.md  checks-reference.md  code-inventory-followups.md  generated-artifacts.md  github-actions.md  main-health.md  onboarding.md  python-interpreter-portability.md  release-checker-hardcoding-audit.md  release-metadata.md  (+1 more)
routines/: README.md  end_of_day.md  market_open.md  midday_scan.md  pre_market.md  weekly_review.md
scripts/: audit_release_assurance_artifact_retention.py  build_product_demo_evidence.py  build_release_assurance_bundle_manifest.py  build_release_evidence_bundle.py  build_reviewer_trust_snapshot.py  check_autonomous_paper_loop_contract.py  check_autonomous_paper_quality_contract.py  check_autonomous_paper_scorecard_contract.py  check_autonomous_paper_workflow_demo.py  check_backtest_report_schema.py  check_bounded_autonomy_governance.py  check_bounded_live_autonomy_readiness_contract.py  check_candidate_chain.py  check_clean_install.py  check_cli_command_compatibility.py  check_demo_command_smoke.py  check_demo_proof.py  check_docs_archive_hygiene.py  check_env_templates.py  check_feedback_intake.py  check_feedback_taxonomy.py  check_final_rc_audit.py  check_forbidden_claims.py  check_gated_submit_conformance_contract.py  check_generated_artifacts.py  check_github_actions_versions.py  check_hardcoded_release_literals.py  check_no_protected_staged.py  check_onboarding_docs.py  check_operator_approval_gate_contract.py  check_package_distribution.py  check_paper_human_review_ledger.py  check_paper_human_review_pack.py  check_paper_human_review_policy.py  check_paper_human_review_replay.py  check_paper_portfolio_dossier.py  check_paper_portfolio_monitoring.py  check_paper_portfolio_proposal.py  check_paper_portfolio_recheck.py  check_paper_portfolio_replay.py  (+119 more)
skills/: README.md  SELECTOR.md  memory_update.md  order_execution.md  reporting.md  research.md  risk_review.md
tests/: conftest.py  test_agent_mode.py  test_ai_decision_schema.py  test_approval_integrity.py  test_audit_fixes.py  test_autonomous_paper_kernel.py  test_autonomous_paper_lock.py  test_autonomous_paper_loop.py  test_autonomous_paper_loop_contract.py  test_autonomous_paper_metrics.py  test_autonomous_paper_models.py  test_autonomous_paper_quality.py  test_autonomous_paper_quality_contract.py  test_autonomous_paper_redaction.py  test_autonomous_paper_runner.py  test_autonomous_paper_scorecard.py  test_autonomous_paper_scorecard_contract.py  test_autonomous_paper_stateful_demo.py  test_autonomous_paper_stateful_integration.py  test_autonomous_paper_workflow_demo.py  test_backtest_metrics.py  test_bounded_autonomy_governance.py  test_bounded_live_autonomy_readiness.py  test_bounded_live_autonomy_readiness_cli.py  test_bounded_live_autonomy_readiness_contract.py  test_bounded_live_autonomy_readiness_import_trace.py  test_broker_alpaca.py  test_candidate_chain.py  test_candidate_chain_e2e.py  test_changelog_consistency.py  test_check_hardcoded_release_literals.py  test_check_runtime_diagnostics.py  test_check_safety_atomic_write.py  test_check_v0610_planning.py  test_check_v0610_release_prep.py  test_check_v0611_planning.py  test_check_v0611_release_prep.py  test_check_v066_release_prep.py  test_check_v067_release_prep.py  test_check_v068_release_prep.py  (+223 more)
(+1038 files in other folders)
