[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-agent"
version = "0.5.7.dev4"
description = "Atlas Agent is a broker-neutral supervised trading workspace with market research, paper workflows, and deterministic risk gates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "jsonschema>=4.0",
    "pydantic",
    "prompt_toolkit>=3.0.30",
    "tomlkit>=0.12",
    "python-dotenv>=1.0"
]
license = { text = "MIT" }
authors = [{ name = "Atlas Agent Contributors" }]

[project.scripts]
atlas = "atlas_agent.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/atlas-agent/templates/routine-trader" = [
  "templates/routine-trader/.env.example",
  "templates/routine-trader/.gitignore",
  "templates/routine-trader/README.md",
]
"share/atlas-agent/templates/routine-trader/memory" = [
  "templates/routine-trader/memory/*.md",
]
"share/atlas-agent/templates/routine-trader/routines" = [
  "templates/routine-trader/routines/README.md",
]
"share/atlas-agent/templates/routine-trader/routines/prompts" = [
  "templates/routine-trader/routines/prompts/*.md",
]
"share/atlas-agent/templates/routine-trader/routines/schedules" = [
  "templates/routine-trader/routines/schedules/*",
]
"share/atlas-agent/templates/routine-trader/skills" = [
  "templates/routine-trader/skills/*.md",
]
"share/atlas-agent/templates/routine-trader/reports/daily" = [
  "templates/routine-trader/reports/daily/.gitkeep",
]
"share/atlas-agent/templates/routine-trader/reports/agent" = [
  "templates/routine-trader/reports/agent/.gitkeep",
]
"share/atlas-agent/templates/routine-trader/reports/learning" = [
  "templates/routine-trader/reports/learning/.gitkeep",
]
"share/atlas-agent/templates/routine-trader/reports/reflections" = [
  "templates/routine-trader/reports/reflections/.gitkeep",
]
"share/atlas-agent/templates/routine-trader/reports/weekly" = [
  "templates/routine-trader/reports/weekly/.gitkeep",
]
"share/atlas-agent/templates/routine-trader/pending_orders" = [
  "templates/routine-trader/pending_orders/.gitkeep",
]
"share/atlas-agent/templates/routine-trader/audit" = [
  "templates/routine-trader/audit/.gitkeep",
]
"share/atlas-agent/templates/routine-trader/events" = [
  "templates/routine-trader/events/.gitkeep",
]
"share/atlas-agent/templates/routine-trader/configs" = [
  "templates/routine-trader/configs/brokers.example.yaml",
  "templates/routine-trader/configs/market.example.yaml",
  "templates/routine-trader/configs/providers.example.yaml",
  "templates/routine-trader/configs/risk.example.yaml",
  "templates/routine-trader/configs/scheduler.example.yaml",
  "templates/routine-trader/configs/strategy.example.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
