[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-agent"
version = "0.5.9.dev0"
description = "Atlas Agent is a broker-neutral supervised trading workspace with market research, paper workflows, and deterministic risk gates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "jsonschema>=4.0",
    "pydantic",
    "prompt_toolkit>=3.0.30",
    "tomlkit>=0.12",
    "python-dotenv>=1.0"
]
license = { text = "MIT" }
authors = [{ name = "Atlas Agent Contributors" }]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.0",
    "ruff>=0.6",
    "mypy>=1.0",
    "build>=1.0",
    "pip-audit>=2.0",
]

[project.scripts]
atlas = "atlas_agent.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"atlas_agent" = [
  "templates/routine-trader/**",
  "templates/routine-trader/.env.example",
  "templates/routine-trader/.gitignore",
  "templates/routine-trader/audit/.gitkeep",
  "templates/routine-trader/events/.gitkeep",
  "templates/routine-trader/memory/conversations/.gitkeep",
  "templates/routine-trader/pending_orders/.gitkeep",
  "templates/routine-trader/reports/agent/.gitkeep",
  "templates/routine-trader/reports/daily/.gitkeep",
  "templates/routine-trader/reports/learning/.gitkeep",
  "templates/routine-trader/reports/reflections/.gitkeep",
  "templates/routine-trader/reports/weekly/.gitkeep",
  "templates/routine-trader/skills/active/.gitkeep",
  "templates/routine-trader/skills/archived/.gitkeep",
  "templates/routine-trader/skills/proposed/.gitkeep",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
